--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "scrambling-text",
-  "version": "1.2.0",
+  "name": "scrambling-text-next",
+  "version": "1.0.0",
+  "type": "module",
   "description": "A very simple JavaScript library written in vanilla js for scrambling text.",
-  "main": "dist/scrambling-text.js",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/scrambling-text-next.es.js"
+    },
+    "./react": {
+      "types": "./dist/react/react.d.ts",
+      "import": "./dist/react.es.js"
+    },
+    "./vue": {
+      "types": "./dist/vue/vue.d.ts",
+      "import": "./dist/vue.es.js"
+    }
+  },
+  "module": "./dist/scrambling-text-next.es.js",
   "scripts": {
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch-all",
-    "lint": "eslint --ext js .",
-    "build": "webpack --mode production --config webpack.config.js"
+    "test": "vitest --environment happy-dom",
+    "dev": "vite",
+    "build:site": "vue-tsc && vite build --config web.vite.config",
+    "build:lib": "vue-tsc && vite build"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sogoagain/scrambling-text-js.git"
+    "url": "https://github.com/UnCor3/scrambling-text-next"
   },
   "keywords": [
     "text",
@@ -27,34 +43,28 @@
     "transition"
   ],
   "author": {
-    "name": "sogoagain",
-    "email": "imyong0@gmail.com",
-    "url": "https://sogoagain.github.io"
+    "name": "Uncore",
+    "email": "contactuncor3@gmail.com"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sogoagain/scrambling-text-js/issues"
+    "url": "https://github.com/UnCor3/scrambling-text-next/issues"
   },
-  "homepage": "https://github.com/sogoagain/scrambling-text-js#readme",
+  "homepage": "https://github.com/UnCor3/scrambling-text-next#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "@types/jest": "^26.0.7",
-    "babel-jest": "^26.2.1",
-    "babel-loader": "^8.1.0",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "given2": "^2.1.7",
-    "jest": "^26.2.1",
-    "jest-plugin-context": "^2.9.0",
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
+    "@types/markdown-it": "^14.1.1",
+    "@types/node": "^20.14.9",
+    "@types/prismjs": "^1.26.4",
+    "@types/react": "^18.3.3",
+    "@types/vue": "^2.0.0",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "glob": "^10.4.2",
+    "happy-dom": "^14.12.3",
+    "markdown-it": "^14.1.0",
+    "prismjs": "^1.29.0",
+    "vite": "^5.3.1",
+    "vite-plugin-dts": "^3.9.1",
+    "vitest": "^1.6.0"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.10.4"
-  }
+  "dependencies": {}
 }
