add base property

--- a/package.json
+++ b/package.json
@@ -62,11 +62,10 @@
     "happy-dom": "^14.12.3",
     "markdown-it": "^14.1.0",
     "prismjs": "^1.29.0",
-    "vite": "^5.3.1",
+    "typescript": "5.2.2",
+    "vite": "5.2",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   },
-  "dependencies": {
-    "typescript": "5.4"
-  }
+  "dependencies": {}
 }
