--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -2,6 +2,10 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
  
 name: Publish Package to npmjs
+
+permissions:
+  id-token: write
+  
 on:
   release:
     types: [published]
